2003-03-24  Naba Kumar  <naba@gnome.org>

	* anjuta.glade, src/anjuta_dialog_strings: Made all un-necessary
	GtkFrames invisible and adjust border and separation sizes to a
	resonable 5 points.
	
2003-03-21  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* This is the first release candidate for 1.0.2

2003-03-21  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* src/aneditor.cxx, src/main_menubar_def.h: Implement comment/
	uncomment better. Patch from Jean-Noel
	* src/anjuta-tools.c, src/anjuta_cbs.c, src/preferences.[ch],
	src/preferences_gui.c, src/mainmenu_callbacks.[ch],
	src/project_dbase.c:Add preferences for MRU notebook tabs, UI
	builder, documentation browser and debugger.
	* global-tags/create_global_tags.sh: Fixed SDL warning
	* TODO: Updated TODO for 1.0.2
	* plugins/sample1/plugin-sample1.c: Fixed GCC warning
	* src/anjuta-tools.c, src/anjuta.[ch]: Cleanups
	* src/controls.c, src/debugger.[ch], src/main_menubar.[ch]
	, src/main_menubar_def.h: Implemented sending custom commands
	 to the debugger.

2003-03-19  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* tagmanager/*: Added ignore-list for symbols. This will make
	parsing more accurate for projects. Doc updates needed.

2003-03-12  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* configure.in: Added missing libs gnomeui and xml

2003-03-12  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* anjuta.spec.in, global-tags/Makefile.am, src/launcher.c:
	Minor bugfixes.

2003-03-05  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* SEARCH-REPLACE, THANKS, TODO: Updated docs
	* src/*, plugins/*, printing/*: Floating windows should hide
	like other windows now.
	* src/anjuta-tools.c, src/search-replace.c: Bugfixes.

2003-03-03  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* scripts/anjuta_import.sh.in: Improve project import
	* src/search-replace.c: Bugfixes.