@@ -408,6 +408,40 @@ static GnomeUIInfo comment_submenu_uiinfo[NUM_COMMENT_SUBMENUS+1] = {
 	GNOMEUIINFO_END/*10*/
 };
 
+#define NUM_FIND_SUBMENUS 5
+static GnomeUIInfo find_submenu_uiinfo[NUM_FIND_SUBMENUS+1] = {
+	{/*0*/
+	GNOME_APP_UI_ITEM, N_("_Find ..."),
+	N_("Search for a string or regular expression in the editor"),
+	on_find1_activate, NULL, NULL,
+	GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SEARCH,
+	GDK_F, GDK_CONTROL_MASK, NULL},
+	{/*1*/
+	GNOME_APP_UI_ITEM, N_("Find _Next"),
+	N_("Repeat the last Find command"),
+	on_findnext1_activate, NULL, NULL,
+	GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SEARCH,
+	GDK_F6, GDK_SHIFT_MASK, NULL},
+	{/*2*/
+	GNOME_APP_UI_ITEM, N_("Find and R_eplace ..."),
+	N_("Search for and replace a string or regular expression with another string"),
+	on_find_and_replace1_activate, NULL, NULL,
+	GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SRCHRPL,
+	GDK_F, GDK_CONTROL_MASK | GDK_SHIFT_MASK, NULL},
+	{/*3*/
+	GNOME_APP_UI_ITEM, N_("Fin_d in Files ..."),
+	N_("Search for a string in multiple files or directories"),
+	on_find_in_files1_activate, NULL, NULL,
+	GNOME_APP_PIXMAP_NONE, NULL,
+	0, 0, NULL},
+	{/*4*/
+	GNOME_APP_UI_ITEM, N_("_Enter Selection/I-Search"),
+	N_("Enter the selected text as the search target"),
+	on_enterselection, NULL, NULL,
+	GNOME_APP_PIXMAP_NONE, NULL,
+	GDK_E, GDK_CONTROL_MASK, NULL},
+	GNOMEUIINFO_END/*5*/
+};
 
 #define NUM_GOTO_SUBMENUS 12
 static GnomeUIInfo goto1_submenu_uiinfo[NUM_GOTO_SUBMENUS+1] = {
@@ -487,7 +521,7 @@ static GnomeUIInfo goto1_submenu_uiinfo[NUM_GOTO_SUBMENUS+1] = {
 	GNOMEUIINFO_END/*12*/
 };
 
-#define	NUM_EDIT_SUBMENUS 17
+#define	NUM_EDIT_SUBMENUS 18
 static GnomeUIInfo edit1_menu_uiinfo[NUM_EDIT_SUBMENUS+1] = {
 	{/*0*/
 	 GNOME_APP_UI_ITEM, N_("U_ndo"),
@@ -563,11 +597,11 @@ static GnomeUIInfo edit1_menu_uiinfo[NUM_EDIT_SUBMENUS+1] = {
 	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
     {/*12*/
-		 GNOME_APP_UI_ITEM, N_("Find/Replace"),
-	 N_("Search for and replace a string or regular expression with another string"),
-	 anjuta_search_replace_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SEARCH,
-	 GDK_F, GDK_CONTROL_MASK, NULL},
+	 GNOME_APP_UI_SUBTREE, N_("_Search"),
+	 NULL,
+	 find_submenu_uiinfo, NULL, NULL,
+	 GNOME_APP_PIXMAP_NONE, NULL,
+	 0, 0, NULL},
     {/*13*/
 	 GNOME_APP_UI_SUBTREE, N_("G_o to"),
 	 NULL,
@@ -583,14 +617,20 @@ static GnomeUIInfo edit1_menu_uiinfo[NUM_EDIT_SUBMENUS+1] = {
 	 on_editor_command_activate, (gpointer) ANE_COMPLETEWORD, NULL,
 	 GNOME_APP_PIXMAP_NONE, NULL,
 	 GDK_Return, GDK_CONTROL_MASK, NULL},
-	
+
 	{/*16*/
 	 GNOME_APP_UI_ITEM, N_("S_how calltip"),
 	 N_("Show calltip for the function"),
 	 on_calltip1_activate, NULL, NULL,
 	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
-	/*17*/
+	 {/*17*/
+	 GNOME_APP_UI_ITEM, N_("Advanced Search/Replace"),
+	 N_("Advanced Search And Replace stuff"),
+	 anjuta_search_replace_activate, NULL, NULL,
+	 GNOME_APP_PIXMAP_NONE, NULL,
+	 0, 0, NULL},
+	/*18*/
 	GNOMEUIINFO_END
 };
 
@@ -1871,6 +1911,7 @@ static GnomeUIInfo* anjuta_menus_uiinfo[] = {
 	transform1_submenu_uiinfo,
 	select1_submenu_uiinfo,
 	comment_submenu_uiinfo,
+	find_submenu_uiinfo,
 	goto1_submenu_uiinfo,
 	insert_template_c_uiinfo,
 	inserttext1_submenu_uiinfo,
