@@ -877,6 +877,23 @@ on_calltip1_activate (GtkMenuItem * menuitem, gpointer user_data)
 	anjuta_not_implemented (__FILE__, __LINE__);
 }
 
+void
+on_find1_activate (GtkMenuItem * menuitem, gpointer user_data)
+{
+	find_text_show (app->find_replace->find_text);
+}
+
+void
+on_find_in_files1_activate (GtkMenuItem * menuitem, gpointer user_data)
+{
+	find_in_files_show (app->find_in_files);
+}
+
+void
+on_find_and_replace1_activate (GtkMenuItem * menuitem, gpointer user_data)
+{
+	find_replace_show (app->find_replace);
+}
 
 void on_prev_occur(GtkMenuItem * menuitem, gpointer user_data)
 {
@@ -2149,6 +2166,19 @@ on_reload_yes_clicked (GtkButton * button, gpointer te_data)
 {
 	text_editor_load_file ((TextEditor *) te_data);
 	anjuta_update_title ();
+}
+
+void
+on_findnext1_activate (GtkMenuItem * menuitem, gpointer user_data)
+{
+	on_toolbar_find_clicked ( NULL, NULL );
+}
+
+void
+on_enterselection (GtkMenuItem * menuitem, gpointer user_data)
+{
+	enter_selection_as_search_target();
+	gtk_widget_grab_focus (app->widgets.toolbar.main_toolbar.find_entry);
 }
 
 void on_customize_shortcuts_activate(GtkMenuItem *menuitem, gpointer user_data)
